# TSDynamics

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE-PLANNING.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  STREAMS.md  VIZ-CHSH.md  VIZ-STYLING-DESIGN.md  conftest.py  environment.yml  index.html  mkdocs.yml  objects.inv  orbit.html  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.claude/: launch.json  polish_designs.json  polish_synthesis.json  viz-m2-swarm.mjs  viz-m2b-swarm.mjs  viz-swarm.mjs  wf-mypy-core.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  cross-validation.yml  docs.yml  engine-bindings.yml  nightly.yml  perf-analysis.yml  perf.yml  pr-title.yml  publish.yml  release.yml  rust-core.yml  rust-workspace.yml  security-audit.yml  tests.yml  wheels.yml
.planning/: CONTRIBUTING-CLAUDE.md  ROADMAP.md  STATUS.md
_static/: lorenz-threejs.json  tsdyn-threejs-loader.js
analysis/: index.html
bench/: RESULTS.md  maps_bench.py  ode_bench.py
benches/: REPORT.md  analysis_bench.py  bench_backends.py  bench_engine.py
benchmarks/: README.md  RESULTS.md  config.py  harness.py  run_benchmarks.py  runworker.py  series.py
crates/: Cargo.toml
crates/tsdyn-core/: Cargo.toml  pyproject.toml
crates/tsdyn-core/python/tsdynamics/: .gitkeep
crates/tsdyn-core/src/: bridge.rs  ir.rs  lib.rs
crates/tsdyn-core/src/bridge/: basin.rs  dde.rs  events.rs  lyapunov.rs  map.rs  map_lyapunov.rs  marshal.rs  mod.rs  ode.rs  sde.rs  stepper.rs
crates/tsdyn-core/src/ir/: map.rs  mod.rs  ode.rs
crates/tsdyn-engine/: Cargo.toml
crates/tsdyn-engine/src/: basin.rs  dde.rs  ensemble.rs  event.rs  integrate.rs  lib.rs  lyapunov.rs  map.rs  map_lyapunov.rs  param_sweep.rs  problem.rs  rng.rs  sde.rs  testkit.rs
crates/tsdyn-ir/: Cargo.toml
crates/tsdyn-ir/src/: builder.rs  eval.rs  lib.rs  op.rs  reference.rs  tape.rs
crates/tsdyn-ir/tests/: coverage_tape.rs  gen_fixtures.py  golden_fixtures.rs  roundtrip.rs
crates/tsdyn-ir/tests/fixtures/: CircadianRhythm.txt  Lorenz.txt  SanUmSrisuchinwong.txt  SprottMore.txt  Torus.txt  YuWang2.txt
crates/tsdyn-jit/: Cargo.toml
crates/tsdyn-jit/src/: codegen.rs  error.rs  evaluator.rs  lib.rs  shims.rs
crates/tsdyn-jit/tests/: compile_latency.rs  golden_fixtures.rs  interpreter_equivalence.rs
crates/tsdyn-maps/: Cargo.toml
crates/tsdyn-maps/src/: lib.rs
crates/tsdyn-native/: Cargo.toml
crates/tsdyn-native/src/: lib.rs  maps.rs  ode.rs  smoke.rs
crates/tsdyn-ode/: Cargo.toml
crates/tsdyn-ode/src/: butcher.rs  controller.rs  driver.rs  erk_extra.rs  error.rs  events.rs  lib.rs  method.rs  rhs.rs  rosenbrock.rs  step_helpers.rs  util.rs  variational.rs  vern9.rs
crates/tsdyn-ode/src/methods/: butcher.rs  embedded_pairs.rs  explicit_dp5_rk4.rs  mod.rs
crates/tsdyn-ode/src/methods/implicit/: lu.rs  mod.rs  rosenbrock.rs
crates/tsdyn-ode/src/methods/vern6/: extra_generated.rs  interp_generated.rs  mod.rs  tableau_generated.rs
crates/tsdyn-ode/src/methods/vern7/: extra_generated.rs  interp_generated.rs  mod.rs  tableau_generated.rs
crates/tsdyn-ode/src/methods/vern8/: extra_generated.rs  interp_generated.rs  mod.rs  tableau_generated.rs
crates/tsdyn-ode/src/methods/vern9/: extra.rs  interp.rs  main_stage.rs  mod.rs
crates/tsdyn-ode/tests/: rosenbrock_lorenz.rs
crates/tsdyn-smoke/: Cargo.toml
crates/tsdyn-smoke/src/: lib.rs
crates/tsdyn-solver-base/: Cargo.toml
crates/tsdyn-solver-base/src/: lib.rs  time_grid.rs
crates/tsdyn-solvers/: Cargo.toml
crates/tsdyn-solvers/src/: caps.rs  lib.rs  registry.rs  solver.rs
crates/tsdyn-solvers/src/explicit/: adams.rs  bs3.rs  cashkarp.rs  control.rs  dop853.rs  euler.rs  heun.rs  heun_euler.rs  midpoint.rs  mod.rs  ralston.rs  rk4.rs  rk45.rs  rk4_38.rs  rkf45.rs  ssprk3.rs  testkit.rs  tsit5.rs
crates/tsdyn-solvers/src/implicit/: backward_euler.rs  bdf.rs  control.rs  implicit_midpoint.rs  linalg.rs  mod.rs  newton.rs  rosenbrock.rs  sdirk2.rs  trapezoid.rs  trbdf2.rs
crates/tsdyn-solvers/src/sde/: euler_maruyama.rs  milstein.rs  mod.rs  testkit.rs
crates/tsdyn-solvers/tests/: explicit_accuracy.rs  implicit_stiff.rs  registry.rs
crates/tsdyn-vm/: Cargo.toml
crates/tsdyn-vm/src/: interp.rs  lib.rs
crates/tsdyn-vm/tests/: golden_fixtures.rs  oracle_equivalence.rs
crates/tsdynamics-core/: Cargo.toml  pyproject.toml
crates/tsdynamics-core/src/: lib.rs  rk45.rs  rosenbrock.rs  vm.rs
docs/: index.md
hooks/: citation_lint.py  docs_autogen.py
overrides/: home.html
project/: index.html
reference/: index.html
scripts/: bootstrap-issues.sh  claim-stream.sh  gen_verner_ode_coeffs.py  generate_map_goldens.py  generate_ode_goldens.py  generate_ode_lyap_goldens.py  make_lorenz_anim.py  stream_status.py  verify_animation.py
search/: search_index.json
start/: index.html
systems/: index.html
tests/: _changed_select.py  _doctest_select.py  _engine_marker.py  _equation_reference_golden.txt  _sampling.py  _strategies.py  conftest.py  test_accessors.py  test_analysis.py  test_analysis_layout.py  test_analysis_registry.py  test_analysis_result.py  test_analysis_sagitta.py  test_audit_WP10_basins.py  test_audit_WP11_discrete_derived.py  test_audit_WP12_viz_compose_spec.py  test_audit_WP13_viz_render.py  test_audit_WP14_tests_selector.py  test_audit_WP15_rust_caps.py  test_audit_WP1_results_lyap.py  test_audit_WP2_dimensions_corr.py  test_audit_WP3_surrogate.py  test_audit_WP4_fixedpoints.py  test_audit_WP5_sagitta.py  test_audit_WP6_engine_method.py  test_audit_WP7_embedding.py  test_audit_WP8_orbits.py  test_audit_WP9_chaos_zeroone.py  test_audit_annotations.py  test_auto_stiffness.py  test_base.py  test_basin_kernel.py  test_basins.py  test_basins_diverged_policy.py  test_bdf_stiff.py  test_boxcount_origin.py  test_cache_isolation.py  test_calling_convention.py  test_catalogue_literature.py  test_cfam_seam.py  (+131 more)
theory/: index.html
transforms/: index.html
tutorials/: index.html
(+904 files in other folders)
