[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "tsdynamics"
dynamic = ["version"]
description = "Compiled ODE/DDE integration, discrete maps, and chaos analysis for dynamical systems."
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
license-files = ["LICENSE*"]
authors = [{ name = "Daniel Estevez", email = "kemossabee@gmail.com" }]

keywords = [
  "dynamical systems",
  "ODE",
  "DDE",
  "chaos",
  "Lyapunov exponents",
  "nonlinear dynamics",
  "bifurcation",
  "attractors",
  "reservoir computing",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]

dependencies = [
  "numpy>=2.0,<3.0",
  "scipy>=1.14,<2.0",
  "numba>=0.60,<1.0",
  "jitcdde>=1.8,<2.0",
  "jitcode>=1.7,<2.0",
  "symengine>=0.13,<1.0",
  "sympy>=1.13,<2.0",
]

[project.urls]
Source = "https://github.com/El3ssar/TSDynamics"
Documentation = "https://el3ssar.github.io/TSDynamics/"
Issues = "https://github.com/El3ssar/TSDynamics/issues"
Changelog = "https://github.com/El3ssar/TSDynamics/releases"

[project.optional-dependencies]
plot = ["matplotlib>=3.9"]
# Experimental Rust-backed ODE solver (DiffSL JIT). See docs → Theory → Backends.
diffsol = ["pydiffsol>=0.5"]
# Optional fast LZ76 provider for analysis.entropy (provider="lzcomplexity").
# The built-in native parser is the default and needs no extra.
lz = ["lzcomplexity>=0.9"]

# ── Dependency groups (uv-native, dev-only) ────────────────────────────────────

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.8",
  "hypothesis>=6.100",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
  "mkdocs-glightbox>=0.4",
  "pymdown-extensions>=10.7",
  "griffe>=1.0",
  "matplotlib>=3.9",
]

# ── Hatch ──────────────────────────────────────────────────────────────────────

[tool.hatch.build]
include = ["src/tsdynamics/**", "README.md", "LICENSE*"]
# Local experiment debris (native extension prototypes) must never ship.
exclude = ["src/tsdynamics/_native/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/tsdynamics"]

[tool.hatch.build.targets.sdist]
include = ["src/tsdynamics/**", "README.md", "LICENSE*", "tests/**"]
exclude = ["src/tsdynamics/_native/**"]

[tool.hatch.version]
path = "src/tsdynamics/__init__.py"

# ── Release automation — python-semantic-release ───────────────────────────────
# Version bumps are computed from conventional commit messages on main:
#   feat: -> minor, fix:/perf: -> patch, "BREAKING CHANGE:"/! -> major
# The version lives ONLY in src/tsdynamics/__init__.py; PSR rewrites it, commits,
# tags vX.Y.Z, and creates the GitHub release. CI publishes to PyPI.
# ───────────────────────────────────────────────────────────────────────────────

[tool.semantic_release]
version_variables = ["src/tsdynamics/__init__.py:__version__"]
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
parse_squash_commits = true
ignore_merge_commits = true

# ── Ruff ───────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "D"]
ignore = [
  "E501",    # line length — handled by formatter
  "D105",    # missing docstring in magic method
  "D107",    # missing docstring in __init__
  "B008",    # do not perform function calls in default args
  # ── Math-notation conventions (intentional) ─────────────────────────────
  "N803",    # argument name should be lowercase — Y, N, L are standard math notation
  "N805",    # first argument should be 'self' — false positive on @staticmethod/@staticjit
  "N806",    # variable in function should be lowercase — X, Y, N, L are math convention
  # ── Module/package docstrings (optional for math-system collections) ────
  "D100",    # missing docstring in public module
  "D104",    # missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101"]   # no docstrings required in tests; allow assert
# ── Systems: math classes are self-documenting by name; intentional readability patterns ──
"src/tsdynamics/systems/**" = [
  "D101",    # missing docstring in public class — class names are the documentation
  "F841",    # local variable assigned but never used — intentional in _jac methods for visual symmetry
]

[tool.ruff.lint.isort]
known-first-party = ["tsdynamics"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style   = "double"
indent-style  = "space"
line-ending   = "auto"

# ── Mypy ───────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version        = "3.12"
strict                = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numba.*", "jitcode.*", "jitcdde.*", "symengine.*", "pywt.*"]
ignore_missing_imports = true

# ── Coverage ───────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/tsdynamics"]

[tool.coverage.report]
show_missing = true

# ── Pytest ─────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --tb=short --strict-markers --cov=src/tsdynamics --cov-report=term-missing -m 'not full'"
markers   = [
  "slow: marks tests that compile JiTCODE/JiTCDDE C code or run long simulations (deselect with: pytest -m 'not slow')",
  "full: exhaustive sweeps that compile every built-in system; deselected by default, run nightly (select with: pytest -m full)",
]
filterwarnings = [
  "error",
  "ignore:.*Generating compiled integrator failed.*:UserWarning",
  "ignore:.*READ ME FIRST.*:UserWarning",
  "ignore:.*target time is smaller than the current time.*:UserWarning",
  "ignore:.*License classifiers have been superseded.*:UserWarning",
  "ignore:.*larger nsteps is needed.*:UserWarning",
  "ignore:.*step size becomes too small.*:UserWarning",
  "ignore:.*divide by zero encountered in divide.*:RuntimeWarning",
  # JiTCODE/JiTCDDE leave TemporaryDirectory objects to GC cleanup; harmless on Python 3.14+
  "ignore:.*Implicitly cleaning up.*TemporaryDirectory.*:ResourceWarning",
]
