[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "tsdynamics"
version = "3.1.3"
description = "Zero-warmup Rust-engine ODE/DDE/SDE integration, discrete maps, and chaos analysis for dynamical systems."
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
license-files = ["LICENSE*"]
authors = [{ name = "Daniel Estevez", email = "kemossabee@gmail.com" }]

keywords = [
  "dynamical systems",
  "ODE",
  "DDE",
  "chaos",
  "Lyapunov exponents",
  "nonlinear dynamics",
  "bifurcation",
  "attractors",
  "reservoir computing",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]

dependencies = [
  "numpy>=2.0,<3.0",
  "scipy>=1.14,<2.0",
  # symengine/sympy are the symbolic FRONTEND (lower _equations to the engine IR,
  # autogen the Jacobian, render docs LaTeX) — not a v2 integration backend.
  "symengine>=0.13,<1.0",
  "sympy>=1.13,<2.0",
]

[project.urls]
Source = "https://github.com/El3ssar/TSDynamics"
Documentation = "https://el3ssar.github.io/TSDynamics/"
Issues = "https://github.com/El3ssar/TSDynamics/issues"
Changelog = "https://github.com/El3ssar/TSDynamics/releases"

[project.optional-dependencies]
plot = ["matplotlib>=3.9"]
# Optional fast LZ76 provider for analysis.entropy (provider="lzcomplexity").
# The built-in native parser is the default and needs no extra.
lz = ["lzcomplexity>=0.9"]

# ── Dependency groups (uv-native, dev-only) ────────────────────────────────────

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.8",
  "hypothesis>=6.100",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.27",
  "mkdocs-glightbox>=0.4",
  "pymdown-extensions>=10.7",
  "griffe>=1.0",
  "matplotlib>=3.9",
]

# ── maturin (the single compiled wheel: Python package + Rust engine) ──────────
# Since M3 the engine is the sole backend, so `tsdynamics` is one maturin wheel
# carrying both the Python tree (src/) and the `tsdynamics._rust` extension built
# from the cdylib crate.  abi3 (CPython ≥ 3.12) → one wheel per platform.

[tool.maturin]
module-name = "tsdynamics._rust"
python-source = "src"
manifest-path = "crates/tsdyn-core/Cargo.toml"
features = ["extension-module"]
exclude = ["src/tsdynamics/_native/**"]

# ── Release automation — python-semantic-release ───────────────────────────────
# Version bumps are computed from conventional commit messages on main:
#   feat: -> minor, fix:/perf: -> patch, "BREAKING CHANGE:"/! -> major
# maturin cannot read __version__ from a Python file, so the canonical version is
# the static [project] version (PSR rewrites it) and src/tsdynamics/__init__.py is
# kept in lock-step.  PSR does NOT build (the platform wheels are built by the
# release wheel matrix); it only computes the bump, rewrites the version, tags and
# creates the GitHub release.
# ───────────────────────────────────────────────────────────────────────────────

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/tsdynamics/__init__.py:__version__"]
build_command = ""
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.commit_parser_options]
parse_squash_commits = true
ignore_merge_commits = true

# ── Ruff ───────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "D"]
ignore = [
  "E501",    # line length — handled by formatter
  "D105",    # missing docstring in magic method
  "D107",    # missing docstring in __init__
  "B008",    # do not perform function calls in default args
  # ── Math-notation conventions (intentional) ─────────────────────────────
  "N803",    # argument name should be lowercase — Y, N, L are standard math notation
  "N805",    # first argument should be 'self' — false positive on @staticmethod/@staticjit
  "N806",    # variable in function should be lowercase — X, Y, N, L are math convention
  # ── Module/package docstrings (optional for math-system collections) ────
  "D100",    # missing docstring in public module
  "D104",    # missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101"]   # no docstrings required in tests; allow assert
# ── Systems: math classes are self-documenting by name; intentional readability patterns ──
"src/tsdynamics/systems/**" = [
  "D101",    # missing docstring in public class — class names are the documentation
  "F841",    # local variable assigned but never used — intentional in _jac methods for visual symmetry
]

[tool.ruff.lint.isort]
known-first-party = ["tsdynamics"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style   = "double"
indent-style  = "space"
line-ending   = "auto"

# ── Mypy ───────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version        = "3.12"
strict                = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["symengine.*"]
ignore_missing_imports = true

# The system *catalogue* — every built-in ODE/DDE/SDE/map — defines its dynamics
# through framework-contract kernels (`_equations` / `_step` / `_jacobian` /
# `_drift` / `_diffusion`) that mypy cannot model:
#   * parameters arrive *positionally* in the class-level `params` dict order
#     (each system's signature is deliberately system-specific, so every override
#     is "incompatible" with the generic base — `__init_subclass__` enforces the
#     real contract at import time, and the analytic Jacobians are cross-checked
#     against SymEngine autogen in the test suite);
#   * the bodies build SymEngine/NumPy expressions, so annotating the scalar state
#     components adds no safety.
# We therefore relax exactly the codes inherent to that contract for the
# catalogue only — `override` (system-specific signatures), `no-untyped-def` (the
# math kernels themselves) and `no-untyped-call` (calls between those untyped
# kernels and their nested helpers). Every other check (and the entire core
# library) stays strict. `staticjit` is aliased to `staticmethod` for the type
# checker (see `utils/general.py`), which clears the spurious self-binding errors
# so this list need not grow.
[[tool.mypy.overrides]]
module = ["tsdynamics.systems.*"]
disable_error_code = ["override", "no-untyped-def", "no-untyped-call"]

# ── Coverage ───────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/tsdynamics"]

[tool.coverage.report]
show_missing = true

# ── Pytest ─────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --tb=short --strict-markers --cov=src/tsdynamics --cov-report=term-missing -m 'not full'"
markers   = [
  "slow: marks tests that run long simulations or compile the engine extension (deselect with: pytest -m 'not slow')",
  "full: exhaustive sweeps over every built-in system; deselected by default, run nightly (select with: pytest -m full)",
  "engine: requires the compiled tsdynamics._rust extension; auto-applied to modules that import it and selected by the engine CI job with -m engine (stream I-XVAL)",
  "doctest: the executable-documentation gate — docstring doctests + doc-page python fences (stream DOCS-DOCTEST-GATE); curated-fast by default, broad sweep under -m full",
]
filterwarnings = [
  "error",
  "ignore:.*License classifiers have been superseded.*:UserWarning",
  "ignore:.*divide by zero encountered in divide.*:RuntimeWarning",
]
