# TSDynamics Rust engine — Cargo workspace (v3 program, ROADMAP §4a).
#
# One concern per crate so parallel work streams edit disjoint files. The build
# graph mirrors the architecture table; the owning stream is noted per crate:
#
#   tsdyn-ir       the instruction-tape contract                  (F1)  → —
#   tsdyn-vm       interpreter `Evaluator` over the tape          (E1)  → ir
#   tsdyn-jit      Cranelift `Evaluator`, same trait              (E2)  → ir (+cranelift)
#   tsdyn-solvers  `Solver` trait + one kernel per module         (E3/E4) → ir
#   tsdyn-engine   problem + integrate loop + ensembles + RNG     (E5)  → ir, vm, jit, solvers
#   tsdyn-core     PyO3 bindings → the `tsdynamics._rust` module  (E7)  → engine
#
# The dependency edges below are pre-wired so the workspace builds as a unit.
#
# The v2 accelerator `tsdynamics-core` was the engine being replaced (D1); the M3
# migration (stream I-XVAL) retired it, so the tsdyn-* crates below are now the
# sole integration engine. `tsdyn-core` (the PyO3 binding cdylib) remains excluded
# from `--workspace` for the linkage reason noted at `exclude` below.

[workspace]
resolver = "2"
members = [
    "tsdyn-ir",
    "tsdyn-vm",
    "tsdyn-jit",
    "tsdyn-solvers",
    "tsdyn-engine",
]
# `tsdyn-core` (the PyO3 binding → `tsdynamics._rust`) is excluded from
# `--workspace`: it is a `pyo3` *extension-module* `cdylib`. Such a crate cannot
# be a clean workspace member — `rust-workspace.yml` runs `cargo test --workspace
# --all-features` on a Python-free runner, and a pyo3 extension test/build target
# either fails to link libpython (no `extension-module`) or leaves the Python
# C-API symbols undefined in the test harness (`extension-module` on). It keeps
# its own lockfile and is built by `maturin` (the project's build backend; the
# root `pyproject.toml` points `manifest-path` at it), path-depending on the
# engine crates above.
exclude = ["tsdyn-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Estevez"]
repository = "https://github.com/El3ssar/TSDynamics"

# Shared version pins. Member crates opt in with `<dep>.workspace = true` so the
# whole engine agrees on one version of each. Internal crates are referenced by
# path here; external engine/binding deps (pyo3, numpy, rayon) are pre-pinned to
# the versions already proven in `tsdynamics-core`. Solver-/JIT-specific deps
# (e.g. cranelift for tsdyn-jit) are declared by their owning crate, not here.
[workspace.dependencies]
tsdyn-ir = { path = "tsdyn-ir" }
tsdyn-vm = { path = "tsdyn-vm" }
tsdyn-jit = { path = "tsdyn-jit" }
tsdyn-solvers = { path = "tsdyn-solvers" }
tsdyn-engine = { path = "tsdyn-engine" }
rayon = "1.10"
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py312"] }
numpy = "0.26"
