[package]
name = "tsdyn-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Estevez"]
repository = "https://github.com/El3ssar/TSDynamics"
description = "TSDynamics PyO3 bindings: marshal numpy <-> slices, release the GIL, and build the `tsdynamics._rust` engine extension."

# Stream E7. This crate is the only one that knows about Python; it converts the
# F0 skeleton into the compiled extension. It is deliberately **outside** the
# `crates/` workspace (see the exclude note in `crates/Cargo.toml`): a pyo3
# `extension-module` cdylib cannot ride `cargo test --workspace` on a Python-free
# runner, so it keeps its own lockfile and is built by maturin/cargo here. The
# engine crates it drives are pulled in by path.
[lib]
name = "_rust"
# `cdylib` builds the importable extension; `rlib` lets `cargo test` build this
# crate's own unit tests (the pure-Rust bridge in `bridge.rs`).
crate-type = ["cdylib", "rlib"]

[dependencies]
# pyo3 WITHOUT `extension-module` by default: a plain `cargo build`/`cargo test`
# then links libpython normally so the bridge unit tests run. `maturin` (and the
# CI wheel build) turn on `extension-module` via the `extension-module` feature
# below, which suppresses the libpython link for the shipped `.so`. abi3-py312 →
# one wheel for CPython >= 3.12.
pyo3 = { version = "0.29", default-features = false, features = ["abi3-py312"] }
numpy = "0.29"

# The engine, by path (this crate is not a workspace member, so no `.workspace`).
# rayon reaches us transitively through tsdyn-engine, which owns the ensemble
# fan-out; this crate never calls it directly, so it is not a direct dependency.
#
# tsdyn-jit is a *direct* dependency (E-WIRE): the JIT bridge constructs a
# `JitEvaluator` here and dispatches it through the engine's `&dyn Evaluator`
# seam, so the Cranelift backend (pure Rust, no LLVM) enters the wheel build tree
# via this crate. It was correctly dropped from `tsdyn-engine` in #74 — the
# engine drives evaluators by trait and never names a concrete one.
tsdyn-ir = { path = "../tsdyn-ir" }
tsdyn-vm = { path = "../tsdyn-vm" }
tsdyn-jit = { path = "../tsdyn-jit" }
tsdyn-solvers = { path = "../tsdyn-solvers" }
tsdyn-engine = { path = "../tsdyn-engine" }

[features]
# Enabled by maturin (`[tool.maturin] features = ["extension-module"]`) when
# building the shipped extension; left OFF for `cargo test` so the unit-test
# harness links libpython and runs. Kept off the default set on purpose.
extension-module = ["pyo3/extension-module"]
